--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 __pycache__/
+.vscode
 
 # Environments
 .env
@@ -15,3 +16,18 @@ deployment_files/*.zip
 *.tfstate*
 **/.terraform*
 layer_dependencies
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
